tests/e2e/scope_individual_try_catch_fail2.error
Error: syntax error in story at line 4, column 5

4|        c = ""
          ^^^

E0100: Can't assign `string` to `int`
