tests/e2e/scope_individual_try_catch_fail2.story
try
	c = 1
catch as e
	c = ""
